# Wraith

./: .gitignore  App.tsx  COMPONENT_MODULARIZATION_CHECKLIST.md  FEATURES.md  app.json  eas.json  index.html  metro.config.js  package-lock.json  package.json  playwright.config.ts  test-headless.js  tsconfig.json  vite.config.ts  vitest.config.ts
agents/: Claude.md
docs/: API_DATA_VALIDATION_CHECKLIST.md  INFRASTRUCTURE_PLAN.md  README.md  TAP_TRADING.md  api-reference.md  architecture.md  components.md  frontend-integration-plan.md  trading-integration-checklist.md
e2e/: api-data-validation.spec.ts  api.spec.ts  asset-detail.spec.ts  capture-all-charts.spec.ts  chart-comparison.spec.ts  chart-data-comparison.spec.ts  chart-review.spec.ts  component-states.spec.ts  contrast-check.spec.ts  debug-asset.spec.ts  debug.spec.ts  drawdown-protection.spec.ts  filter-validation.spec.ts  hint-indicator.spec.ts  home.spec.ts  leaderboard.spec.ts  manual-balance-check.spec.ts  mobile-asset-review.spec.ts  mock-data-handling.spec.ts  responsive.spec.ts  sherpa-hints.spec.ts  stock-data-investigation.spec.ts  toolbar-scroll.spec.ts  trade-sandbox.spec.ts  trading-flow.spec.ts  ui-visual.spec.ts  verify-portfolio-balance.spec.ts  visual-review.spec.ts
ios/: Podfile
playwright-report/: index.html
scripts/: diagnose-performance.js  screenshot.js  trace-error.js  ui-sanity-check.mjs  validate-throttle.ts  ws-debug.js
src/: App.tsx  main.test.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/: throttle-validation.test.ts
(+571 files in other folders)
