[package]
name = "wraith-desktop"
version = "0.1.0"
description = "Wraith Trading Platform - Desktop Application"
authors = ["Wraith Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "wraith_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.1", features = [
    "tray-icon",
    "devtools",
] }
tauri-plugin-shell = "2.0"
tauri-plugin-window-state = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-deep-link = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
